Refactor StartJobTask to use a JobStarter interface and update tests to capture job execution parameters